--- a/.github/workflows/cicd-test-asp.net_core-ci_(1).yml
+++ b/.github/workflows/cicd-test-asp.net_core-ci_(1).yml
@@ -10,9 +10,7 @@ env:
 jobs:
   Job_1:
     name: Agent job 1
-    runs-on:
-      - self-hosted
-      - Default
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
